libs/fitsio.h

    typedef __int64 LONGLONG;
    typedef unsigned __int64 ULONGLONG;
    typedef long long LONGLONG;
    typedef unsigned long long ULONGLONG;
    typedef __int64 LONGLONG;
    typedef unsigned __int64 ULONGLONG;
    typedef long long LONGLONG;
    typedef unsigned long long ULONGLONG;
typedef struct        
{
    char ttype[70];   
    LONGLONG tbcol;       
    int  tdatatype;   
    LONGLONG trepeat;    
    double tscale;    
    double tzero;     
    LONGLONG tnull;   
    char strnull[20]; 
    char tform[10];   
    long  twidth;     
}tcolumn;
typedef struct      
{
    int filehandle;   
    int driver;       
    int open_count;   
    char *filename;   
    int validcode;    
    int only_one;     
    int noextsyntax;  
    LONGLONG filesize; 
    LONGLONG logfilesize; 
    int lasthdu;      
    LONGLONG bytepos; 
    LONGLONG io_pos;  
    int curbuf;        
    int curhdu;       
    int hdutype;      
    int writemode;    
    int maxhdu;       
    int MAXHDU;       
    LONGLONG *headstart; 
    LONGLONG headend;   
    LONGLONG ENDpos;    
    LONGLONG nextkey;   
    LONGLONG datastart; 
    int imgdim;         
    LONGLONG imgnaxis[99]; 
    int tfield;          
    int startcol;        
    LONGLONG origrows;   
    LONGLONG numrows;    
    LONGLONG rowlength;  
    tcolumn *tableptr;   
    LONGLONG heapstart;  
    LONGLONG heapsize;   
    int request_compress_type;  
    long request_tilesize[MAX_COMPRESS_DIM]; 
    float request_quantize_level;  
    int request_quantize_method ;  
    int request_dither_seed;     
    int request_lossy_int_compress; 
    int request_huge_hdu;          
    float request_hcomp_scale;     
    int request_hcomp_smooth;      
    int compress_type;      
    long tilesize[MAX_COMPRESS_DIM]; 
    float quantize_level;   
    int quantize_method;   
    int dither_seed;      
    int compressimg; 
    char zcmptype[12];      
    int zbitpix;            
    int zndim;              
    long znaxis[MAX_COMPRESS_DIM];  
    long maxtilelen;        
    long maxelem;	    
    int cn_compressed;	    
    int cn_uncompressed;    
    int cn_gzip_data;       
    int cn_zscale;	    
    int cn_zzero;	    
    int cn_zblank;          
    double zscale;          
    double zzero;           
    double cn_bscale;       
    double cn_bzero;        
    double cn_actual_bzero; 
    int zblank;             
    int rice_blocksize;     
    int rice_bytepix;       
    float hcomp_scale;      
    int hcomp_smooth;       
    int  *tilerow;          
    long *tiledatasize;     
    int *tiletype;          
    void **tiledata;        
    void **tilenullarray;   
    int *tileanynull;       
    char *iobuffer;         
    long bufrecnum[NIOBUF]; 
    int dirty[NIOBUF];     
    int ageindex[NIOBUF];    
} FITSfile;
typedef struct         
{
    int HDUposition;  
    FITSfile *Fptr;   
}fitsfile;
typedef struct  
{  
    fitsfile *fptr;     
    int      colnum;    
    char     colname[70]; 
    int      datatype;  
    int      iotype;    
    void     *array;    
    long     repeat;    
    long     tlmin;     
    long     tlmax;     
    char     tunit[70]; 
    char     tdisp[70]; 
} iteratorCol;
typedef struct {
   int  i;                      
   int  m;                      
   int  kind;                   
   char extnam[72];             
   int  extver;                 
   int  extlev;                 
   char ttype[72];              
   long row;                    
   int  ndim;                   
   int  *dimlen;                
   double **arrayp;             
} wtbarr;
int CFITS_API fits_read_wcstab(fitsfile *fptr, int nwtb, wtbarr *wtb, int *status);
int CFITS2Unit( fitsfile *fptr );
CFITS_API fitsfile* CUnit2FITS(int unit);
int CFITS_API fits_get_token (char **ptr, char *delimiter, char *token, int *isanumber);
int CFITS_API fits_get_token2(char **ptr, char *delimiter, char **token, int *isanumber, int *status);
char  CFITS_API *fits_split_names(char *list);
int CFITS_API ffiurl(  char *url,  char *urltype, char *infile,
                    char *outfile, char *extspec, char *rowfilter,
                    char *binspec, char *colspec, int *status);
int CFITS_API ffifile (char *url,  char *urltype, char *infile,
                    char *outfile, char *extspec, char *rowfilter,
                    char *binspec, char *colspec, char *pixfilter, int *status);
int CFITS_API ffifile2 (char *url,  char *urltype, char *infile,
                    char *outfile, char *extspec, char *rowfilter,
                    char *binspec, char *colspec, char *pixfilter, char *compspec, int *status);
int CFITS_API ffrtnm(char *url, char *rootname, int *status);
int CFITS_API ffexist(const char *infile, int *exists, int *status);
int CFITS_API ffexts(char *extspec, int *extnum,  char *extname, int *extvers,
          int *hdutype, char *colname, char *rowexpress, int *status);
int CFITS_API ffextn(char *url, int *extension_num, int *status);
int CFITS_API ffurlt(fitsfile *fptr, char *urlType, int *status);
int CFITS_API ffbins(char *binspec, int *imagetype, int *haxis, 
                      char colname[4][FLEN_VALUE], double *minin,
                      double *maxin, double *binsizein,
                      char minname[4][FLEN_VALUE], char maxname[4][FLEN_VALUE],
                      char binname[4][FLEN_VALUE], double *weight, char *wtname,
                      int *recip, int *status);
int CFITS_API ffbinr(char **binspec, char *colname, double *minin, 
                        double *maxin, double *binsizein, char *minname,
                        char *maxname, char *binname, int *status);
int CFITS_API fits_copy_cell2image(fitsfile *fptr, fitsfile *newptr, char *colname,
                      long rownum, int *status);
int CFITS_API fits_copy_image2cell(fitsfile *fptr, fitsfile *newptr, char *colname,
                      long rownum, int copykeyflag, int *status);
int CFITS_API fits_copy_pixlist2image(fitsfile *infptr, fitsfile *outfptr, int firstkey,       
           int naxis, int *colnum, int *status);
int CFITS_API ffimport_file( char *filename, char **contents, int *status );
int CFITS_API ffrwrg( char *rowlist, LONGLONG maxrows, int maxranges, int *numranges,
      long *minrow, long *maxrow, int *status);
int CFITS_API ffrwrgll( char *rowlist, LONGLONG maxrows, int maxranges, int *numranges,
      LONGLONG *minrow, LONGLONG *maxrow, int *status);
int CFITS_API fits_init_cfitsio(void);
int CFITS_API ffomem(fitsfile **fptr, const char *name, int mode, void **buffptr,
           size_t *buffsize, size_t deltasize,
           void *(*mem_realloc)(void *p, size_t newsize),
           int *status);
int CFITS_API ffopen(fitsfile **fptr, const char *filename, int iomode, int *status);
int CFITS_API ffopentest(int soname, fitsfile **fptr, const char *filename, int iomode, int *status);
int CFITS_API ffdopn(fitsfile **fptr, const char *filename, int iomode, int *status);
int CFITS_API ffeopn(fitsfile **fptr, const char *filename, int iomode, 
     char *extlist, int *hdutype, int *status);
int CFITS_API fftopn(fitsfile **fptr, const char *filename, int iomode, int *status);
int CFITS_API ffiopn(fitsfile **fptr, const char *filename, int iomode, int *status);
int CFITS_API ffdkopn(fitsfile **fptr, const char *filename, int iomode, int *status);
int CFITS_API ffreopen(fitsfile *openfptr, fitsfile **newfptr, int *status);
int CFITS_API ffinit(  fitsfile **fptr, const char *filename, int *status);
int CFITS_API ffdkinit(fitsfile **fptr, const char *filename, int *status);
int CFITS_API ffimem(fitsfile **fptr,  void **buffptr,
           size_t *buffsize, size_t deltasize,
           void *(*mem_realloc)(void *p, size_t newsize),
           int *status);
int CFITS_API fftplt(fitsfile **fptr, const char *filename, const char *tempname,
           int *status);
int CFITS_API ffflus(fitsfile *fptr, int *status);
int CFITS_API ffflsh(fitsfile *fptr, int clearbuf, int *status);
int CFITS_API ffclos(fitsfile *fptr, int *status);