src/wrapper.zig

pub const LONGLONG = c_longlong;
pub const ULONGLONG = c_ulonglong;
pub const tcolumn = extern struct {
    ttype: [70]u8 = @import("std").mem.zeroes([70]u8),
    tbcol: LONGLONG = @import("std").mem.zeroes(LONGLONG),
    tdatatype: c_int = @import("std").mem.zeroes(c_int),
    trepeat: LONGLONG = @import("std").mem.zeroes(LONGLONG),
    tscale: f64 = @import("std").mem.zeroes(f64),
    tzero: f64 = @import("std").mem.zeroes(f64),
    tnull: LONGLONG = @import("std").mem.zeroes(LONGLONG),
    strnull: [20]u8 = @import("std").mem.zeroes([20]u8),
    tform: [10]u8 = @import("std").mem.zeroes([10]u8),
    twidth: c_long = @import("std").mem.zeroes(c_long),
};
pub const FITSfile = extern struct {
    filehandle: c_int = @import("std").mem.zeroes(c_int),
    driver: c_int = @import("std").mem.zeroes(c_int),
    open_count: c_int = @import("std").mem.zeroes(c_int),
    filename: [*c]u8 = @import("std").mem.zeroes([*c]u8),
    validcode: c_int = @import("std").mem.zeroes(c_int),
    only_one: c_int = @import("std").mem.zeroes(c_int),
    noextsyntax: c_int = @import("std").mem.zeroes(c_int),
    filesize: LONGLONG = @import("std").mem.zeroes(LONGLONG),
    logfilesize: LONGLONG = @import("std").mem.zeroes(LONGLONG),
    lasthdu: c_int = @import("std").mem.zeroes(c_int),
    bytepos: LONGLONG = @import("std").mem.zeroes(LONGLONG),
    io_pos: LONGLONG = @import("std").mem.zeroes(LONGLONG),
    curbuf: c_int = @import("std").mem.zeroes(c_int),
    curhdu: c_int = @import("std").mem.zeroes(c_int),
    hdutype: c_int = @import("std").mem.zeroes(c_int),
    writemode: c_int = @import("std").mem.zeroes(c_int),
    maxhdu: c_int = @import("std").mem.zeroes(c_int),
    MAXHDU: c_int = @import("std").mem.zeroes(c_int),
    headstart: [*c]LONGLONG = @import("std").mem.zeroes([*c]LONGLONG),
    headend: LONGLONG = @import("std").mem.zeroes(LONGLONG),
    ENDpos: LONGLONG = @import("std").mem.zeroes(LONGLONG),
    nextkey: LONGLONG = @import("std").mem.zeroes(LONGLONG),
    datastart: LONGLONG = @import("std").mem.zeroes(LONGLONG),
    imgdim: c_int = @import("std").mem.zeroes(c_int),
    imgnaxis: [99]LONGLONG = @import("std").mem.zeroes([99]LONGLONG),
    tfield: c_int = @import("std").mem.zeroes(c_int),
    startcol: c_int = @import("std").mem.zeroes(c_int),
    origrows: LONGLONG = @import("std").mem.zeroes(LONGLONG),
    numrows: LONGLONG = @import("std").mem.zeroes(LONGLONG),
    rowlength: LONGLONG = @import("std").mem.zeroes(LONGLONG),
    tableptr: [*c]tcolumn = @import("std").mem.zeroes([*c]tcolumn),
    heapstart: LONGLONG = @import("std").mem.zeroes(LONGLONG),
    heapsize: LONGLONG = @import("std").mem.zeroes(LONGLONG),
    request_compress_type: c_int = @import("std").mem.zeroes(c_int),
    request_tilesize: [6]c_long = @import("std").mem.zeroes([6]c_long),
    request_quantize_level: f32 = @import("std").mem.zeroes(f32),
    request_quantize_method: c_int = @import("std").mem.zeroes(c_int),
    request_dither_seed: c_int = @import("std").mem.zeroes(c_int),
    request_lossy_int_compress: c_int = @import("std").mem.zeroes(c_int),
    request_huge_hdu: c_int = @import("std").mem.zeroes(c_int),
    request_hcomp_scale: f32 = @import("std").mem.zeroes(f32),
    request_hcomp_smooth: c_int = @import("std").mem.zeroes(c_int),
    compress_type: c_int = @import("std").mem.zeroes(c_int),
    tilesize: [6]c_long = @import("std").mem.zeroes([6]c_long),
    quantize_level: f32 = @import("std").mem.zeroes(f32),
    quantize_method: c_int = @import("std").mem.zeroes(c_int),
    dither_seed: c_int = @import("std").mem.zeroes(c_int),
    compressimg: c_int = @import("std").mem.zeroes(c_int),
    zcmptype: [12]u8 = @import("std").mem.zeroes([12]u8),
    zbitpix: c_int = @import("std").mem.zeroes(c_int),
    zndim: c_int = @import("std").mem.zeroes(c_int),
    znaxis: [6]c_long = @import("std").mem.zeroes([6]c_long),
    maxtilelen: c_long = @import("std").mem.zeroes(c_long),
    maxelem: c_long = @import("std").mem.zeroes(c_long),
    cn_compressed: c_int = @import("std").mem.zeroes(c_int),
    cn_uncompressed: c_int = @import("std").mem.zeroes(c_int),
    cn_gzip_data: c_int = @import("std").mem.zeroes(c_int),
    cn_zscale: c_int = @import("std").mem.zeroes(c_int),
    cn_zzero: c_int = @import("std").mem.zeroes(c_int),
    cn_zblank: c_int = @import("std").mem.zeroes(c_int),
    zscale: f64 = @import("std").mem.zeroes(f64),
    zzero: f64 = @import("std").mem.zeroes(f64),
    cn_bscale: f64 = @import("std").mem.zeroes(f64),
    cn_bzero: f64 = @import("std").mem.zeroes(f64),
    cn_actual_bzero: f64 = @import("std").mem.zeroes(f64),
    zblank: c_int = @import("std").mem.zeroes(c_int),
    rice_blocksize: c_int = @import("std").mem.zeroes(c_int),
    rice_bytepix: c_int = @import("std").mem.zeroes(c_int),
    hcomp_scale: f32 = @import("std").mem.zeroes(f32),
    hcomp_smooth: c_int = @import("std").mem.zeroes(c_int),
    tilerow: [*c]c_int = @import("std").mem.zeroes([*c]c_int),
    tiledatasize: [*c]c_long = @import("std").mem.zeroes([*c]c_long),
    tiletype: [*c]c_int = @import("std").mem.zeroes([*c]c_int),
    tiledata: [*c]?*anyopaque = @import("std").mem.zeroes([*c]?*anyopaque),
    tilenullarray: [*c]?*anyopaque = @import("std").mem.zeroes([*c]?*anyopaque),
    tileanynull: [*c]c_int = @import("std").mem.zeroes([*c]c_int),
    iobuffer: [*c]u8 = @import("std").mem.zeroes([*c]u8),
    bufrecnum: [40]c_long = @import("std").mem.zeroes([40]c_long),
    dirty: [40]c_int = @import("std").mem.zeroes([40]c_int),
    ageindex: [40]c_int = @import("std").mem.zeroes([40]c_int),
};
pub const fitsfile = extern struct {
    HDUposition: c_int = @import("std").mem.zeroes(c_int),
    Fptr: [*c]FITSfile = @import("std").mem.zeroes([*c]FITSfile),
};
pub const iteratorCol = extern struct {
    fptr: [*c]fitsfile = @import("std").mem.zeroes([*c]fitsfile),
    colnum: c_int = @import("std").mem.zeroes(c_int),
    colname: [70]u8 = @import("std").mem.zeroes([70]u8),
    datatype: c_int = @import("std").mem.zeroes(c_int),
    iotype: c_int = @import("std").mem.zeroes(c_int),
    array: ?*anyopaque = @import("std").mem.zeroes(?*anyopaque),
    repeat: c_long = @import("std").mem.zeroes(c_long),
    tlmin: c_long = @import("std").mem.zeroes(c_long),
    tlmax: c_long = @import("std").mem.zeroes(c_long),
    tunit: [70]u8 = @import("std").mem.zeroes([70]u8),
    tdisp: [70]u8 = @import("std").mem.zeroes([70]u8),
};
pub const wtbarr = extern struct {
    i: c_int = @import("std").mem.zeroes(c_int),
    m: c_int = @import("std").mem.zeroes(c_int),
    kind: c_int = @import("std").mem.zeroes(c_int),
    extnam: [72]u8 = @import("std").mem.zeroes([72]u8),
    extver: c_int = @import("std").mem.zeroes(c_int),
    extlev: c_int = @import("std").mem.zeroes(c_int),
    ttype: [72]u8 = @import("std").mem.zeroes([72]u8),
    row: c_long = @import("std").mem.zeroes(c_long),
    ndim: c_int = @import("std").mem.zeroes(c_int),
    dimlen: [*c]c_int = @import("std").mem.zeroes([*c]c_int),
    arrayp: [*c][*c]f64 = @import("std").mem.zeroes([*c][*c]f64),
};
pub extern fn fits_read_wcstab(fptr: [*c]fitsfile, nwtb: c_int, wtb: [*c]wtbarr, status: [*c]c_int) c_int;
pub extern fn CFITS2Unit(fptr: [*c]fitsfile) c_int;
pub extern fn CUnit2FITS(unit: c_int) [*c]fitsfile;
pub extern fn fits_get_token(ptr: [*c][*c]u8, delimiter: [*c]u8, token: [*c]u8, isanumber: [*c]c_int) c_int;
pub extern fn fits_get_token2(ptr: [*c][*c]u8, delimiter: [*c]u8, token: [*c][*c]u8, isanumber: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn fits_split_names(list: [*c]u8) [*c]u8;
pub extern fn ffiurl(url: [*c]u8, urltype: [*c]u8, infile: [*c]u8, outfile: [*c]u8, extspec: [*c]u8, rowfilter: [*c]u8, binspec: [*c]u8, colspec: [*c]u8, status: [*c]c_int) c_int;
pub extern fn ffifile(url: [*c]u8, urltype: [*c]u8, infile: [*c]u8, outfile: [*c]u8, extspec: [*c]u8, rowfilter: [*c]u8, binspec: [*c]u8, colspec: [*c]u8, pixfilter: [*c]u8, status: [*c]c_int) c_int;
pub extern fn ffifile2(url: [*c]u8, urltype: [*c]u8, infile: [*c]u8, outfile: [*c]u8, extspec: [*c]u8, rowfilter: [*c]u8, binspec: [*c]u8, colspec: [*c]u8, pixfilter: [*c]u8, compspec: [*c]u8, status: [*c]c_int) c_int;
pub extern fn ffrtnm(url: [*c]u8, rootname: [*c]u8, status: [*c]c_int) c_int;
pub extern fn ffexist(infile: [*c]const u8, exists: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffexts(extspec: [*c]u8, extnum: [*c]c_int, extname: [*c]u8, extvers: [*c]c_int, hdutype: [*c]c_int, colname: [*c]u8, rowexpress: [*c]u8, status: [*c]c_int) c_int;
pub extern fn ffextn(url: [*c]u8, extension_num: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffurlt(fptr: [*c]fitsfile, urlType: [*c]u8, status: [*c]c_int) c_int;
pub extern fn ffbins(binspec: [*c]u8, imagetype: [*c]c_int, haxis: [*c]c_int, colname: [*c][71]u8, minin: [*c]f64, maxin: [*c]f64, binsizein: [*c]f64, minname: [*c][71]u8, maxname: [*c][71]u8, binname: [*c][71]u8, weight: [*c]f64, wtname: [*c]u8, recip: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffbinr(binspec: [*c][*c]u8, colname: [*c]u8, minin: [*c]f64, maxin: [*c]f64, binsizein: [*c]f64, minname: [*c]u8, maxname: [*c]u8, binname: [*c]u8, status: [*c]c_int) c_int;
pub extern fn fits_copy_cell2image(fptr: [*c]fitsfile, newptr: [*c]fitsfile, colname: [*c]u8, rownum: c_long, status: [*c]c_int) c_int;
pub extern fn fits_copy_image2cell(fptr: [*c]fitsfile, newptr: [*c]fitsfile, colname: [*c]u8, rownum: c_long, copykeyflag: c_int, status: [*c]c_int) c_int;
pub extern fn fits_copy_pixlist2image(infptr: [*c]fitsfile, outfptr: [*c]fitsfile, firstkey: c_int, naxis: c_int, colnum: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn ffimport_file(filename: [*c]u8, contents: [*c][*c]u8, status: [*c]c_int) c_int;
pub extern fn ffrwrg(rowlist: [*c]u8, maxrows: LONGLONG, maxranges: c_int, numranges: [*c]c_int, minrow: [*c]c_long, maxrow: [*c]c_long, status: [*c]c_int) c_int;
pub extern fn ffrwrgll(rowlist: [*c]u8, maxrows: LONGLONG, maxranges: c_int, numranges: [*c]c_int, minrow: [*c]LONGLONG, maxrow: [*c]LONGLONG, status: [*c]c_int) c_int;
pub extern fn fits_init_cfitsio() c_int;
pub extern fn ffomem(fptr: [*c][*c]fitsfile, name: [*c]const u8, mode: c_int, buffptr: [*c]?*anyopaque, buffsize: [*c]usize, deltasize: usize, mem_realloc: ?*const fn (?*anyopaque, usize) callconv(.C) ?*anyopaque, status: [*c]c_int) c_int;
pub extern fn ffopen(fptr: [*c][*c]fitsfile, filename: [*c]const u8, iomode: c_int, status: [*c]c_int) c_int;
pub extern fn ffopentest(soname: c_int, fptr: [*c][*c]fitsfile, filename: [*c]const u8, iomode: c_int, status: [*c]c_int) c_int;
pub extern fn ffdopn(fptr: [*c][*c]fitsfile, filename: [*c]const u8, iomode: c_int, status: [*c]c_int) c_int;
pub extern fn ffeopn(fptr: [*c][*c]fitsfile, filename: [*c]const u8, iomode: c_int, extlist: [*c]u8, hdutype: [*c]c_int, status: [*c]c_int) c_int;
pub extern fn fftopn(fptr: [*c][*c]fitsfile, filename: [*c]const u8, iomode: c_int, status: [*c]c_int) c_int;
pub extern fn ffiopn(fptr: [*c][*c]fitsfile, filename: [*c]const u8, iomode: c_int, status: [*c]c_int) c_int;
pub extern fn ffdkopn(fptr: [*c][*c]fitsfile, filename: [*c]const u8, iomode: c_int, status: [*c]c_int) c_int;
pub extern fn ffreopen(openfptr: [*c]fitsfile, newfptr: [*c][*c]fitsfile, status: [*c]c_int) c_int;
pub extern fn ffinit(fptr: [*c][*c]fitsfile, filename: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffdkinit(fptr: [*c][*c]fitsfile, filename: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffimem(fptr: [*c][*c]fitsfile, buffptr: [*c]?*anyopaque, buffsize: [*c]usize, deltasize: usize, mem_realloc: ?*const fn (?*anyopaque, usize) callconv(.C) ?*anyopaque, status: [*c]c_int) c_int;
pub extern fn fftplt(fptr: [*c][*c]fitsfile, filename: [*c]const u8, tempname: [*c]const u8, status: [*c]c_int) c_int;
pub extern fn ffflus(fptr: [*c]fitsfile, status: [*c]c_int) c_int;
pub extern fn ffflsh(fptr: [*c]fitsfile, clearbuf: c_int, status: [*c]c_int) c_int;
pub extern fn ffclos(fptr: [*c]fitsfile, status: [*c]c_int) c_int;
